--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,31 +2,29 @@ name: CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
 
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-    - name: Use Node.js 22
-      uses: actions/setup-node@v4
-      with:
-        node-version: 22
-        cache: 'npm'
+      - uses: oven-sh/setup-bun@v1
+        with:
+          bun-version: latest
 
-    - name: Install dependencies
-      run: npm ci
+      - name: Install dependencies
+        run: bun install
 
-    - name: Run Lint
-      run: npm run lint
+      - name: Run Lint
+        run: bun run lint
 
-    - name: Run Build
-      run: npm run build
+      - name: Run Build
+        run: bun run build
 
-    - name: Run Test
-      run: npm run test
+      - name: Run Test
+        run: bun run test
