--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "sass": "^1.97.3",
-    "tailwindcss": "^4.0.6"
+    "tailwindcss": "^4.0.6",
+    "zustand": "^5.0.11"
   },
   "devDependencies": {
     "@tanstack/devtools-vite": "^0.3.11",
